@@ -26,8 +26,19 @@ public class AIServiceImpl implements AIService {
     private final CommentRepository commentRepository;
     private final RestTemplate restTemplate = new RestTemplate();
 
-    @Value("${google.ai.api.key:}")
+    @Value("${deepseek.ai.api.key}")
     private String apiKey;
+
+    private String normalizedApiKey() {
+        if (apiKey == null)
+            return "";
+        String key = apiKey.trim();
+        if (key.length() >= 2
+                && ((key.startsWith("\"") && key.endsWith("\"")) || (key.startsWith("'") && key.endsWith("'")))) {
+            key = key.substring(1, key.length() - 1).trim();
+        }
+        return key;
+    }
 
     @Override
     public String summarizePost(Long postId) {
@@ -37,13 +48,14 @@ public class AIServiceImpl implements AIService {
 
         String prompt = buildPrompt(post, comments);
 
-        if (apiKey == null || apiKey.isBlank()) {
+        final String effectiveKey = normalizedApiKey();
+        if (effectiveKey.isBlank()) {
             log.warn("AI API Key missing. Returning fallback summary.");
             return generateFallbackSummary(post, comments);
         }
 
         try {
-            return callAIModule(prompt);
+            return callDeepSeek(prompt, effectiveKey);
         } catch (Exception e) {
             log.error("Error calling AI API", e);
             return "Unable to generate AI summary at this moment. " + generateFallbackSummary(post, comments);
@@ -68,57 +80,50 @@ public class AIServiceImpl implements AIService {
         return sb.toString();
     }
 
-    private String callAIModule(String prompt) {
-        String url = "https://generativelanguage.googleapis.com/v1/models/gemini-2.5-flash:generateContent?key="
-                + apiKey;
+    private String callDeepSeek(String prompt, String effectiveKey) {
+        String url = "https://api.deepseek.com/chat/completions";
 
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
+        headers.setBearerAuth(effectiveKey);
 
-        // Use Map for robust JSON serialization
-        Map<String, Object> part = new HashMap<>();
-        part.put("text", prompt);
+        Map<String, Object> systemMessage = new HashMap<>();
+        systemMessage.put("role", "system");
+        systemMessage.put("content", "You are a helpful assistant that summarizes forum posts and comments concisely.");
 
-        Map<String, Object> content = new HashMap<>();
-        content.put("parts", Collections.singletonList(part));
+        Map<String, Object> userMessage = new HashMap<>();
+        userMessage.put("role", "user");
+        userMessage.put("content", prompt);
 
         Map<String, Object> requestBody = new HashMap<>();
-        requestBody.put("contents", Collections.singletonList(content));
+        requestBody.put("model", "deepseek-chat");
+        requestBody.put("messages", List.of(systemMessage, userMessage));
+        requestBody.put("stream", false);
 
         HttpEntity<Map<String, Object>> entity = new HttpEntity<>(requestBody, headers);
 
         try {
-            // Use Map for robust JSON deserialization
             ResponseEntity<Map> response = restTemplate.postForEntity(url, entity, Map.class);
 
             if (response.getStatusCode() == HttpStatus.OK && response.getBody() != null) {
                 Map<String, Object> body = response.getBody();
-
-                // Navigate Gemini response structure: candidates[0].content.parts[0].text
-                List candidates = (List) body.get("candidates");
-                if (candidates != null && !candidates.isEmpty()) {
-                    Map firstCandidate = (Map) candidates.get(0);
-                    Map resContent = (Map) firstCandidate.get("content");
-                    if (resContent != null) {
-                        List parts = (List) resContent.get("parts");
-                        if (parts != null && !parts.isEmpty()) {
-                            Map firstPart = (Map) parts.get(0);
-                            String text = (String) firstPart.get("text");
-                            if (text != null) {
-                                return text.trim();
-                            }
-                        }
+                List choices = (List) body.get("choices");
+                if (choices != null && !choices.isEmpty()) {
+                    Map firstChoice = (Map) choices.get(0);
+                    Map message = (Map) firstChoice.get("message");
+                    if (message != null) {
+                        return ((String) message.get("content")).trim();
                     }
                 }
-                log.warn("Gemini response missing expected content structure: {}", body);
+                log.warn("DeepSeek response missing expected structure: {}", body);
             } else {
-                log.error("Gemini API returned error status: {} - {}", response.getStatusCode(), response.getBody());
+                log.error("DeepSeek API returned error: {} - {}", response.getStatusCode(), response.getBody());
             }
         } catch (Exception e) {
-            log.error("Exception while calling Gemini API", e);
+            log.error("Exception while calling DeepSeek API", e);
             throw new RuntimeException("AI API failure", e);
         }
-        throw new RuntimeException("Could not extract summary from Gemini response");
+        throw new RuntimeException("Could not extract summary from DeepSeek response");
     }
 
     private String generateFallbackSummary(Post post, List<Comment> comments) {
